Path.get instead of Path.of (revert version)